--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,6 @@
+models/* filter=lfs diff=lfs merge=lfs -text
+fonts/** filter=lfs diff=lfs merge=lfs -text
+models/** filter=lfs diff=lfs merge=lfs -text
 *.md filter=lfs diff=lfs merge=lfs -text
 *.py filter=lfs diff=lfs merge=lfs -text
 *.txt filter=lfs diff=lfs merge=lfs -text
@@ -13,8 +16,6 @@
 *.ckpt filter=lfs diff=lfs merge=lfs -text
 *.bat filter=lfs diff=lfs merge=lfs -text
 * !text !filter !merge !diff
-models/* filter=lfs diff=lfs merge=lfs -text
-fonts/** filter=lfs diff=lfs merge=lfs -text
 *.pth filter=lfs diff=lfs merge=lfs -text
 *.onnx filter=lfs diff=lfs merge=lfs -text
 *.bin filter=lfs diff=lfs merge=lfs -text
