--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,6 @@
+models/* filter=lfs diff=lfs merge=lfs -text
+fonts/** filter=lfs diff=lfs merge=lfs -text
+models/** filter=lfs diff=lfs merge=lfs -text
 *.md filter=lfs diff=lfs merge=lfs -text
 *.py filter=lfs diff=lfs merge=lfs -text
 *.txt filter=lfs diff=lfs merge=lfs -text
