--- a/requirements.txt
+++ b/requirements.txt
@@ -32,7 +32,7 @@ psutil==5.9.5
 py3langid==0.2.2
 pyclipper==1.3.0.post6
 pydantic==2.11.7
-pydensecrf==1.0
+pydensecrf==1.0rc3
 PyHyphen==4.0.4
 PySide6==6.9.2
 pytest==7.2.2
@@ -47,13 +47,13 @@ scipy==1.16.1
 sentencepiece==0.2.1
 setuptools==70.2.0
 Shapely==2.1.1
-skimage==0.0
+scikit-image
 starlette==0.47.3
 tiktoken==0.11.0
 timm==1.0.19
-torch==2.8.0+cu129
+torch==2.8.0
 torch_summary==1.4.5
-torchvision==0.23.0+cu129
+torchvision==0.23.0
 tqdm==4.67.1
 uvicorn==0.35.0
 websockets==14.2
