feat: 添加 PyInstaller 打包配置以创建一键安装包
为项目引入了使用 PyInstaller 创建 CPU 和 GPU 版本一键安装包所需的配置和脚本。

- 添加 `requirements_cpu.txt` 和 `requirements_gpu.txt`，用于管理不同目标环境的依赖。
- 创建了一个详细的 `build.spec` 文件，以处理复杂的项目结构、数据文件和隐藏的导入模块。
- 提供了 `build_cpu.bat` 和 `build_gpu.bat` 脚本，以自动化各个版本的构建过程。
- 更新了示例配置文件 `config-example.json`，使用相对路径作为默认输出目录。
- 添加了 `.gitignore` 文件，以排除缓存文件和虚拟环境，保持仓库整洁。

--- a/examples/config-example.json
+++ b/examples/config-example.json
@@ -1,4 +1,7 @@
 {
+    "filter_text": null,
+    "kernel_size": 3,
+    "mask_dilation_offset": null,
     "translator": {
         "translator": "chatgpt",
         "target_lang": "CHS",
@@ -29,7 +32,7 @@
         "inpainting_precision": "bf16"
     },
     "render": {
-        "renderer": "manga2eng",
+        "renderer": "default",
         "alignment": "auto",
         "disable_font_border": true,
         "font_size_offset": 0,
@@ -41,7 +44,7 @@
         "no_hyphenation": false,
         "font_color": ":FFFFFF",
         "rtl": true,
-        "layout_mode": "strict"
+        "layout_mode": "smart_scaling"
     },
     "upscale": {
         "upscaler": "esrgan",
@@ -63,7 +66,7 @@
         "overwrite": true,
         "skip_no_text": true,
         "use_mtpe": false,
-        "save_text": true,
+        "save_text": false,
         "load_text": false,
         "template": false,
         "prep_manual": false,
@@ -71,5 +74,5 @@
         "batch_size": 1,
         "batch_concurrent": false
     },
-    "last_output_path": "D:/xiazai/图片助手(ImageAssistant)_批量图片下载器/output"
+    "last_output_path": "result"
 }
