--- a/requirements_gpu.txt
+++ b/requirements_gpu.txt
@@ -14,19 +14,18 @@ googletrans==4.0.0-rc1
 httpcore
 httpx
 huggingface-hub
-ijson
 kornia
 langcodes
 loguru
 manga-ocr
 networkx
-numpy==1.26.4
+numpy
 omegaconf
 onnxruntime
 openai
 opencv-python==4.12.0.88
 packaging
-pandas==1.5.3
+pandas
 Pillow
 psutil
 py3langid
@@ -64,3 +63,9 @@ tqdm
 uvicorn
 websockets
 xformers
+deepl
+groq
+torchsummary
+open_clip_torch
+google-generativeai
+python-bidi
