--- a/requirements_cpu.txt
+++ b/requirements_cpu.txt
@@ -1,3 +1,59 @@
-version https://git-lfs.github.com/spec/v1
-oid sha256:aeedc3d5bf0b9198d2a4066f725874f801b381d512207802f1ffc99ec9527aac
-size 692
+--extra-index-url https://download.pytorch.org/whl/cpu
+aiofiles
+aiohttp
+aioshutil
+albumentations
+arabic_reshaper
+backports.statistics
+colorama
+ctranslate2
+customtkinter
+einops
+fastapi
+freetype-py
+googletrans==4.0.0-rc1
+httpcore
+httpx
+huggingface-hub
+ijson
+kornia
+langcodes
+loguru
+manga-ocr
+networkx
+numpy
+omegaconf
+onnxruntime
+openai
+opencv-python==4.12.0.88
+packaging
+pandas==1.5.3
+Pillow
+psutil
+py3langid
+pyclipper
+pydantic
+
+PyHyphen
+PySide6
+pytest
+python-dotenv
+pytorch-lightning
+regex
+requests
+rich
+rusty_manga_image_translator
+safetensors
+scipy
+sentencepiece
+setuptools
+Shapely
+scikit-image
+starlette
+tiktoken
+timm
+transformers
+tqdm
+uvicorn
+websockets
+xformers
