修复Git配置：更新.gitignore忽略.env文件，优化Git LFS配置只跟踪大文件；添加桌面UI组件代码

--- a/.gitignore
+++ b/.gitignore
@@ -5,5 +5,9 @@ __pycache__/
 # Virtual environment
 venv/
 
+# Environment files (contain sensitive information)
+.env
+.env.*
+
 # Claude settings
 .claude/
