修复导出功能并完善流程控制

--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,18 @@ venv/
 
 # Build output
 dist/
+
+# Build artifacts
+build/
+result/
+
+# PyInstaller
+*.spec
+
+# Batch files and executables
+*.bat
+*.exe
+*.sh
+
+# Wheel files
+*.whl
