--- a/examples/config-example.json
+++ b/examples/config-example.json
@@ -1,7 +1,7 @@
 {
     "filter_text": null,
     "kernel_size": 3,
-    "mask_dilation_offset": null,
+    "mask_dilation_offset": 20,
     "translator": {
         "translator": "chatgpt",
         "target_lang": "CHS",
